Bug 31279 - Acknowledge that opaque types are always decl-only

When handling a decl-only base class, add_or_update_class_type asserts
that we need to try to resolve the decl-only base class to its
definition.  That makes sense in most cases.

However, in cases where the base class is actually an opaque class
resulting from the use of the --header-dir{1,2} option of abidiff, the
opaque type is by definition a decl-only class artificially created
from a fully defined class.

When the opaque class is anonymous (later named by a typedef),
maybe_schedule_declaration_only_class_for_resolution schedules a
decl-only class named by the empty string for resolution to its
definition.  Later when add_or_update_class_type handles the decl-only
base class (now named by a typedef),
reader::is_decl_only_class_scheduled_for_resolution looks for the
typedef name; as the class scheduled for resolution by
maybe_schedule_declaration_only_class_for_resolution was then
anonymous, reader::is_decl_only_class_scheduled_for_resolution returns
false and the assert in add_or_update_class_type fails.  It's the
problem reported in this issue.  Oops.

When the opaqued decl-only type is anonymous,
maybe_schedule_declaration_only_{class,enum}_for_resolution must NOT
schedule it for resolution to its definition because the scheduled
types for resolution are designated by name.  This patch now enforces
that.

It just doesn't make sense to schedule an anonymous type for
resolution to its definition.  When the type is later named by a
typedef however, then it's scheduled for resolution to its definition,
as it's no more anonymous at that point.  The patch enforces that as
well.

The patch ends up making sure that add_or_update_class_type does /not/
assert that an /anonymous/ decl-only base class is scheduled for
resolution to its definition.

These changes should fix the problem reported at
https://sourceware.org/bugzilla/show_bug.cgi?id=31279.

	* src/abg-dwarf-reader.cc
	(reader::maybe_schedule_declaration_only_{class,enum}_for_resolution):
	Do not schedule anonymous decl-only types for resolution to their
	definition.
	(build_typedef_type): When an anonymous decl-only type has just
	been named by a typedef, schedule it for resolution to its
	definition.
	(add_or_update_class_type): Do not assert that /anonymous/
	decl-only types are scheduled for resolution to their definition.

Signed-off-by: Dodji Seketeli <dodji@redhat.com>